TIMECIRCUITS - FIX - z-index

--- a/src/components/TimeCircuits/_timecircuits.scss
+++ b/src/components/TimeCircuits/_timecircuits.scss
@@ -25,7 +25,7 @@ $time-circuit-highlights: rgb(255 255 255 / 15%);
 	font-weight: normal;
 	font-size: font-size(default);
 	line-height: 1;
-	z-index: 5;
+	z-index: 6;
 	border-radius: 3px 3px 0 0;
 	box-shadow: 0 0 20px -5px $color-black, inset 0 -6px 10px 0 rgb(0 0 0 / 50%);
 	border-top: 1px solid $time-circuit-highlights;
